--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
@@ -17,7 +17,7 @@
             </Virtualize>
         </CascadingValue>
     </div>
-    @if (Value.Count > 0 && showStatisticsCard)
+    @if (ShowStatisticsCard)
     {
         <MultiDisplay MdAndUp="true">
             <DesktopContent>
