--- a/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCardList.razor
@@ -13,7 +13,7 @@
         </Virtualize>
     </div>
 
-    @if (Value.Count > 0 && showStatisticsCard)
+    @if (ShowStatisticsCard)
     {
         <MultiDisplay MdAndUp="true">
             <DesktopContent>
