--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
@@ -36,7 +36,7 @@
                     </MIcon>
                 </MListItemIcon>
                 <MListItemContent>
-                    @(I18n.T("Setting.Display.Markdown mode.Name"))
+                    @(I18n.T("Markdown"))
                 </MListItemContent>
                 <MListItemAction>
                     <SettingSwitch @bind-Value="markdown"
