--- a/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCardList.razor
@@ -16,7 +16,7 @@
             </Virtualize>
         </CascadingValue>
     </div>
-    @if (Value.Count > 0 && showStatisticsCard)
+    @if (ShowStatisticsCard)
     {
         <MultiDisplay MdAndUp="true">
             <DesktopContent>
