♻️ refactor: rename IndexPage

--- a/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
@@ -17,9 +17,9 @@
     <SwiperTabItem>
         <MContainer Class="my-container"
                     Fluid="true">
-            <IndexHead ShowDate="showDate"
+            <HomeHead ShowDate="showDate"
                        ShowWelcomeText="showWelcomeText">
-            </IndexHead>
+            </HomeHead>
             <DiaryCardList @bind-Value="Diaries"
                            @bind-Tags="Tags">
             </DiaryCardList>
