Update package reference

--- a/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
@@ -50,7 +50,7 @@
     <BackTopButton Class="mb-2"
                    Selector="@SwiperActiveItemSelector">
     </BackTopButton>
-    <MWindow Value="tab" Style="overflow:unset;">
+    <MWindow Value="tab" Style="overflow:unset;" Touchless>
         <MWindowItem Transition="">
             <MyFloatButton Icon="mdi-pencil"
                            OnClick="@(()=>To("write"))">
